# keyboard2

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ffi_helpers.rs  lib.rs  main.rs  virtual_midi.rs
src-tauri/src/definitions/: keys.rs  mod.rs  notes.rs  types.rs
