[package]
name = "keyboard2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keyboard2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
bindgen = "0.71.1"

[dependencies]
winapi = { version = "0.3", features = ["winnt", "minwindef", "errhandlingapi"] }
widestring = "0.5"
uuid = { version = "1.0", features = ["v4"] }
libloading = "0.8"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61.1", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
] }
